--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   image_picker: 0.8.4+1
   sqflite: ^2.0.0+4
   path_provider: ^2.0.4
+  http: ^0.13.3
+  get: ^4.3.8
+  fluttertoast: ^8.0.8
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
